--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@vechaiui/core": "^0.6.0",
+    "@vechaiui/react": "^0.2.2",
     "axios": "^1.1.3",
     "csvtojson": "^2.0.10",
     "express": "^4.18.2",
@@ -18,7 +21,10 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
     "nodemon": "^2.0.20",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
   }
 }
