--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "csvtojson": "^2.0.10",
     "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
